Final Polished version for presentation demo

--- a/notificationHome.html
+++ b/notificationHome.html
@@ -114,9 +114,8 @@
         </div>
       </div>
 
-      <div class="btn_to_newRequest">
+      <div class="btn_to_newRequest" id="newRequest_btn">
         <svg
-          id="newRequest_btn"
           width="71"
           height="70"
           viewBox="0 0 71 70"
@@ -903,7 +902,7 @@
         <div id="requestDetail"></div>
       </section>
       <section class="tipsInfoSection"></section>
-      <button id="chat_btn" class="main_btn">
+      <div id="chat_btn" class="main_btn">
         <svg
           width="70"
           height="70"
@@ -919,7 +918,6 @@
             d="M43 24H27C25.9 24 25.01 24.9 25.01 26L25 44L29 40H43C44.1 40 45 39.1 45 38V26C45 24.9 44.1 24 43 24ZM29 31H41V33H29V31ZM37 36H29V34H37V36ZM41 30H29V28H41V30Z"
             fill="#81B7AE"
           />
-          <circle cx="44.5" cy="24.5" r="3" fill="#6FCF97" stroke="white" />
           <defs>
             <filter
               id="filter0_ddd"
@@ -988,7 +986,7 @@
             </filter>
           </defs>
         </svg>
-      </button>
+      </div>
     </div>
     <div class="body_wrapper_book">
       <header id="notifDetailHeader">
