fixed text for offline mode the word like had capital first letter

--- a/calendar.html
+++ b/calendar.html
@@ -189,7 +189,7 @@
           </svg>
 
         </div>
-        <p>Looks Like you have no notifications for this day</p>
+        <p>Looks like you have no notifications for this day</p>
       </div>
       <div id="onlineStatus"></div>
     </main>
