Removed prefilled login credentials

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
           <label for="Username"
             ><input
               type="email"
-              value="tenexuser@gmail.com"
               id="username"
               placeholder="Enter Email"
               name="email"
@@ -69,13 +68,12 @@
               id="password"
               placeholder="Enter Password"
               name="psw"
-              value="password"
               required
           /></label>
         </form>
         <p>Forgot password?</p>
         <div class="btn_to_login">
-          <button type="submit" form="loginForm" id="signInBtn">SIGN IN</button>
+          <button type="submit" form="loginForm" id="signInBtn" disabled>SIGN IN</button>
         </div>
         <p>New user?</p>
         <p>Contact your building manager</p>
